
Tue Dec 21 14:50:31 CET 2004 Paolo Molaro <lupus@ximian.com>

	* marshal.c: fix the stelemref wrapper to be type correct
	(and faster).

2004-12-20  Ben Maurer  <bmaurer@ximian.com>

	* icall.c (ves_icall_System_Object_GetHashCode): There was no need
	to do key & 0x7fffffff. Hashtable already does this. It just
	results in longer code.

2004-12-20  Sebastien Pouliot  <sebastien@ximian.com>

	* appdomain.c: Bump corlib version.
	* class-internals.h: Added RuntimeSecurityFrame to mono_defaults.
	* domain.c: Add RuntimeSecurityFrame to mono_defaults.
	* reflection.c|h: Add functions to get declarative security infos
	(blob position and length) for assemblies, classes and methods.

Mon Dec 20 15:28:54 CET 2004 Paolo Molaro <lupus@ximian.com>

	* reflection.c: sort the constant table (bug #70693).

Mon Dec 20 12:19:37 CET 2004 Paolo Molaro <lupus@ximian.com>

	* object-internals.h, threads.c, domain.c: add accessors for
	the MonoThread and MonoDomain tls keys.

2004-12-18  Martin Baulig  <martin@ximian.com>

	* class.c (inflate_generic_type): If we're inflating a generic
	instance, set `ngclass->context->container = context->container';
	ie. the container we inflated into.

	* metadata.c (mono_metadata_parse_generic_param): Reflect above
	inflate_generic_type() changes.

2004-12-17  Martin Baulig  <martin@ximian.com>

	* class-internals.h
	(MonoGenericClass): Replaced `MonoType *generic_type' with
	`MonoClass *generic_class'.  Removed `dynamic_info'; if
	`is_dynamic' is true, we're a `MonoDynamicGenericClass'.
	(MonoDynamicGenericClass): Derive from `MonoGenericClass'.

2004-12-16  Zoltan Varga  <vargaz@freemail.hu>

	* exception.c (mono_exception_from_token): New helper function.

2004-12-15  Zoltan Varga  <vargaz@freemail.hu>

	* assembly.c (mono_assembly_load_with_partial_name): Call 
	mono_assembly_loaded before invoking the preload hooks. Fixes
	#70564.

	* object-internals.h (MonoThread): Change culture_info and 
	ui_culture_info into an array.
